<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_8dp">

        <TextView
            android:id="@+id/tvRank"
            style="@style/table_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_table_header_rank"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvId"
            style="@style/table_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingEnd="@dimen/size_5dp"
            android:text="@string/str_table_header_id"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvProfit"
            style="@style/table_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingEnd="@dimen/size_5dp"
            android:text="@string/str_table_header_profit"
            android:textAlignment="center" />
    </TableRow>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/size_8dp"
        android:background="@color/black_200" />

</RelativeLayout>