<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorBackground"
    android:padding="@dimen/size_16dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextTitlePrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_title_transaction_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAmountTitle"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30dp"
        android:maxLines="1"
        android:text="@string/str_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvAmount"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/tvAmountTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/ivTransactionType"
        android:layout_width="@dimen/size_16dp"
        android:layout_height="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="@id/tvAmount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAmount" />

    <TextView
        android:id="@+id/tvDateTitle"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:maxLines="1"
        android:text="@string/str_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAmountTitle" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_5dp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/tvDateTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAmountTitle" />

    <TextView
        android:id="@+id/tvIdTitle"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:maxLines="1"
        android:text="@string/str_tracking_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateTitle" />

    <TextView
        android:id="@+id/tvId"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_5dp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/tvIdTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDateTitle" />

    <TextView
        android:id="@+id/tvCardTitle"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:maxLines="1"
        android:text="@string/str_card_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIdTitle" />

    <TextView
        android:id="@+id/tvCard"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_5dp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvCardTitle"
        app:layout_constraintTop_toBottomOf="@id/tvIdTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>