<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?colorBackground"
    android:padding="@dimen/size_16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/size_100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextTitlePrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_48dp"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_36"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.crossclassify.trackersdk.utils.view.TrackerEditText
                android:id="@+id/etEmail"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_100dp"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:tag="IncludeContentTracking"
                app:fieldName="email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvErrorEmail"
                style="@style/TextError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/etEmail"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <com.crossclassify.trackersdk.utils.view.TrackerEditText
                android:id="@+id/etName"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:hint="@string/hint_name"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvErrorEmail" />

            <TextView
                android:id="@+id/tvErrorName"
                style="@style/TextError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/etName"
                app:layout_constraintTop_toBottomOf="@id/etName" />


            <com.crossclassify.trackersdk.utils.view.TrackerEditText
                android:id="@+id/etPassword"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                app:fieldName="Password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvErrorName" />

            <TextView
                android:id="@+id/tvErrorPassword"
                style="@style/TextError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <com.crossclassify.trackersdk.utils.view.TrackerEditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                app:fieldName="Password"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvErrorPassword" />

            <TextView
                android:id="@+id/tvErrorConfirmPassword"
                style="@style/TextError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/etConfirmPassword"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

            <TextView
                android:id="@+id/tvGoToSignup"
                style="@style/TextTitlePrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30dp"
                android:text="@string/str_btn_login"
                android:textColor="@color/blue_100"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvErrorConfirmPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_singup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        app:layout_constraintLeft_toLeftOf="@id/btnLogin"
        app:layout_constraintRight_toRightOf="@id/btnLogin"
        app:layout_constraintTop_toTopOf="@id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>