<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?colorBackground">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_with_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTransaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/size_16dp"
            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.crossclassify.trackersdk.utils.view.TrackerRadioGroup
                    android:id="@+id/rgTypePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radio_group"
                    android:orientation="horizontal"
                    android:tag="IncludeContentTracking"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:radio_field_name="transaction_type">

                    <RadioButton
                        android:id="@+id/rbWithdraw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radio_btn_withdraw"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/str_withdraw"
                        android:textColor="@color/color_radio_btn"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rbDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radio_btn_deposit"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/str_deposit"
                        android:textColor="@color/color_radio_btn"
                        android:textStyle="bold" />
                </com.crossclassify.trackersdk.utils.view.TrackerRadioGroup>

                <com.crossclassify.trackersdk.utils.view.TrackerEditText
                    android:id="@+id/etCard"
                    style="@style/EditTextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:drawableRight="@drawable/ic_arrow_bottom"
                    android:hint="@string/hint_card"
                    android:inputType="text"
                    android:tag="IncludeContentTracking"
                    app:fieldName="cardNumber"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rgTypePage" />

                <TextView
                    android:id="@+id/tvErrorCard"
                    style="@style/TextError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@id/etCard"
                    app:layout_constraintTop_toBottomOf="@id/etCard" />

                <TextView
                    android:id="@+id/tvCardBalanceField"
                    style="@style/TextBodyPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_8dp"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:text="@string/str_available_balance"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvErrorCard" />

                <TextView
                    android:id="@+id/tvCardBalance"
                    style="@style/TextBodyPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_8dp"
                    app:layout_constraintBottom_toBottomOf="@id/tvCardBalanceField"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvCardBalanceField" />

                <com.crossclassify.trackersdk.utils.view.TrackerEditText
                    android:id="@+id/etAmount"
                    style="@style/EditTextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:tag="IncludeContentTracking"
                    app:fieldName="transactionAmount"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardBalanceField" />

                <TextView
                    android:id="@+id/tvErrorAmount"
                    style="@style/TextError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@id/etAmount"
                    app:layout_constraintTop_toBottomOf="@id/etAmount" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btnSubmit"
            app:layout_constraintLeft_toLeftOf="@id/btnSubmit"
            app:layout_constraintRight_toRightOf="@id/btnSubmit"
            app:layout_constraintTop_toTopOf="@id/btnSubmit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTransactionList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TableLayout
            android:id="@+id/tlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/size_8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/table_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_table_header_date"
                    android:textAlignment="center" />

                <TextView
                    style="@style/table_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="@dimen/size_5dp"
                    android:text="@string/str_table_header_time"
                    android:textAlignment="center" />

                <TextView
                    style="@style/table_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="@dimen/size_5dp"
                    android:text="@string/str_table_header_value"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransaction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/size_8dp"
            android:paddingTop="@dimen/size_8dp"
            android:paddingRight="@dimen/size_8dp"
            android:paddingBottom="@dimen/size_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlHeader" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>